Update host script in package.json to run server directly

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "install-all": "npm install && npm --prefix server install && npm --prefix client install",
     "setup-db": "npm --prefix server run reset-db",
     "build": "npm --prefix client run build && npm --prefix server run build",
-    "host": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "host": "npm --prefix server run server",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "npm --prefix server run dev",
     "dev:client": "npm --prefix client run dev",
