--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "marriage-portal",
   "scripts": {
     "install-all": "npm install && npm --prefix server install && npm --prefix client install",
-    "setup-db": "npm --prefix server run reset-db",
+    "setup-db": "mv server/.env.example server/.env && npm --prefix server run reset-db",
     "build": "npm --prefix client run build && npm --prefix server run build",
     "host": "npm --prefix server run server",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.0.0",
+    "mv-cli": "^0.0.1",
     "nodemon": "^2.0.0"
   }
 }
